--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h3>Sticky Position Example</h3>
 
   <div class="container">
     <div class=" box">1</div>
